Made the html files
Made the html files and linked the fonts, icons and sass to them

--- a/index.html
+++ b/index.html
@@ -5,11 +5,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="description" content="Homepage">
+    <script src="https://kit.fontawesome.com/591f5bf3d7.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://use.typekit.net/ufr7cbx.css">
+    <link href="css/style.css" rel="stylesheet">
+    <title>Baby Bliss | Homepage</title>
 </head>
 
 <body>
+    <div class="wrapper">
+        <nav>
 
+
+        </nav>
+    </div>
 </body>
 
 </html>
