--- a/add_product.html
+++ b/add_product.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Admin Login">
+    <meta name="description" content="Add product page">
     <script src="https://kit.fontawesome.com/591f5bf3d7.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://use.typekit.net/ufr7cbx.css">
     <link href="css/style.css" rel="stylesheet">
-    <title>Baby Bliss | Admin Login</title>
+    <title>Baby Bliss | Add products</title>
 </head>
 
 <body>
@@ -57,17 +57,36 @@
 
         </header>
         <main>
-            <section class="login__container">
-                <h1>Login </h1>
-                <form class="login__form">
-                    <label for="username">Username</label>
-                    <input type="text" name="username" id="username" class="username">
-                    <div class="username__error"></div>
-                    <label for="password">Password</label>
-                    <input type="text" name="password" id="password" class="password">
-                    <div class="password__error"></div>
+            <section class="add__product__container">
+                <div class="back__to__products__container">
+                    <i class="fal fa-angle-left"></i>
+                    <p>Back to all products</p>
+                </div>
+                <h1>Add product </h1>
+                <form class="add__product__form">
+                    <label for="title">Product title</label>
+                    <input type="text" name="title" id="title" class="title">
+                    <p>Minimum 5 characters</p>
+                    <div class="title__error"></div>
+                    <label for="description">Description</label>
+                    <textarea name="description" id="description" class="description"></textarea>
+                    <p>Minimum 20 characters</p>
+                    <div class="description__error"></div>
+                    <label for="price">Price</label>
+                    <input type="number" name="price" id="price" class="price">
+                    <p>Must have 2 decimals ex: 99,89</p>
+                    <div class="price__error"></div>
+                    <label for="image">Upload image</label>
+                    <input type="file" name="image" id="image" class="image">
+                    <p>Must be a JPG, JPEG or PNG image. Max 200mb</p>
+                    <div class="image__error"></div>
+                    <h5>Featured</h5>
+                    <label for="featured__yes"><i class="fas fa-check-circle"></i></label>
+                    <input type="radio" name="featured__yes" id="featured__yes" class="featured__yes">
+                    <label for="featured__no"><i class="fas fa-times-circle"></i></label>
+                    <input type="radio" name="featured__no" id="featured__no" class="featured__no">
                 </form>
-                <button class="standard__cta__btn">Login</button>
+                <button class="standard__cta__btn">Add product</button>
             </section>
         </main>
     </div>
