--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
                             <div class="basket__count"></div>
                         </a></li>
                     <li><a href="favorites.html">Favorites
-                            <i class="far fa-heart without__fill"></i>
-                            <i class="fas fa-heart with__fill"></i>
+                            <i class="fas fa-heart heart__with__fill"></i>
                         </a></li>
                     <li><a href="about.html">About us</a></li>
                     <li><a href="add_product.html">Add Products</a></li>
@@ -38,20 +37,19 @@
                 </ul>
             </div>
             <div class="nav__logo__container">
-                <img src="logo/Logo_svg.svg" alt="Baby Bliss logo">
+                <img src="logo/Logo_svg.svg" alt="Baby Bliss logo" class="nav__logo">
             </div>
             <div class="alt__nav__container">
                 <div class="alt__nav__basket">
-                    <i class="fas fa-shopping-bag" aria-label="shopping basket"></i>
-                    <div class="basket__count"></div>
+                    <a href="basket.html"><i class="fas fa-shopping-bag" aria-label="shopping basket"></i></a>
+                    <div class="basket__count">2</div>
                 </div>
                 <div class="alt__nav__favorites">
-                    <i class="far fa-heart without__fill"></i>
-                    <i class="fas fa-heart with__fill"></i>
+                    <a href="favorites.html"><i class="fas fa-heart heart__with__fill"></i></a>
                 </div>
                 <div class="alt__nav__user">
-                    <p>Logout user</p>
-                    <i class="fas fa-user-alt"></i>
+                    <!-- <p>Logout user</p> -->
+                    <a href="login.html"><i class="fas fa-user-alt"></i></a>
                 </div>
             </div>
 
