--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                         </a></li>
                     <li><a href="about.html">About us</a></li>
                     <li><a href="add_product.html">Add Products</a></li>
-                    <li><a href="login.html">Login
+                    <li><a href="login.html">Login test
                             <i class="fas fa-user-alt"></i>
                         </a></li>
                     </a>
