--- a/index.html
+++ b/index.html
@@ -89,33 +89,31 @@
         </main>
     </div>
     <footer>
-        <div class="footer__grid">
-            <div class="footer__logo__container">
-                <img src="logo/Logo_svg.svg" alt="Baby Bliss logo">
-            </div>
-            <div class="footer__social__container">
-                <i class="fab fa-instagram"></i>
-                <i class="fab fa-facebook"></i>
-                <i class="fab fa-twitter"></i>
-            </div>
-            <div class="footer__info__container">
-                <h4>Company & Customer Care</h4>
-                <a href="about.html">
-                    <p>About Us</p>
-                </a>
-                <a href="">
-                    <p>Contact Us</p>
-                </a>
-                <a href="">
-                    <p>Shipping & Delivery</p>
-                </a>
-                <a href="">
-                    <p>Terms & Conditions</p>
-                </a>
-                <a href="">
-                    <p>Returns & Exchanges</p>
-                </a>
-            </div>
+        <div class="footer__logo__container">
+            <img src="logo/Logo_svg.svg" alt="Baby Bliss logo" class="footer__logo">
+        </div>
+        <div class="footer__social__container">
+            <i class="fab fa-instagram footer__social"></i>
+            <i class="fab fa-facebook footer__social"></i>
+            <i class="fab fa-twitter footer__social"></i>
+        </div>
+        <div class="footer__info__container">
+            <h4>Company & Customer Care</h4>
+            <a href="about.html">
+                <p>About Us</p>
+            </a>
+            <a href="">
+                <p>Contact Us</p>
+            </a>
+            <a href="">
+                <p>Shipping & Delivery</p>
+            </a>
+            <a href="">
+                <p>Terms & Conditions</p>
+            </a>
+            <a href="">
+                <p>Returns & Exchanges</p>
+            </a>
         </div>
     </footer>
 </body>
