--- a/favorites.html
+++ b/favorites.html
@@ -33,36 +33,18 @@
             </div>
         </header>
         <main>
-            <div class="loading__home"></div>
-            <div class="herobanner__container">
-                <div class="herobanner__img"></div>
-            </div>
-            <section class="favorites__container">
+            <section class="container">
+                <div class="content__wrapper"></div>
                 <h1>Your favorites</h1>
                 <div class="loading__products"></div>
-                <div class="featured__grid">
-                    <div class="product__card">
-                        <div class="favorite__icon__container">
-
-                        </div>
-                        <a href="">
-                            <div class="product__img__container">
-
-                            </div>
-                            <div class="product__title__container">
-
-                            </div>
-                        </a>
-                        <div class="button__container">
-                            <a href=""><button>View product</button></a>
-                        </div>
-                    </div>
-                </div>
-                <div class="all__products__link__container">
+                <div class="favorite__grid">
 
                 </div>
+                <div class="favorite__message__container"></div>
+                <div class="all__products__link__container"></div>
             </section>
-        </main>
+    </div>
+    </main>
     </div>
     <footer>
         <div class="footer__logo__container">
