--- a/about.html
+++ b/about.html
@@ -33,30 +33,42 @@
             </div>
         </header>
         <main>
-            <section class="about__container">
-                <h1>About Us</h1>
-                <p class="intro__about">This website is made by Ørjan G. Berger as part of a school project for Noroff
-                    university</p>
-                <img src="" alt="">
-                <p class="about__cont">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
-                    tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam
-                    et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum
-                    dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
-                    tempor invidunt ut labore et dolore magna aliquyam erat, sed diam</p>
-                <div class="about__social__container">
-                    <div class="about__social">
-                        <i class="fab fa-instagram"></i>
-                        <h5>Babyblissonline</h5>
+            <section class="container">
+                <div class="content__wrapper">
+                    <h1>About Us</h1>
+                    <p class="intro__about">This website is made by Ørjan G. Berger as part of a school project for
+                        Noroff
+                        university</p>
+                    <div class="about__img__container"><img src="./logo/kaushal-mishra-p76UivR30oo-unsplash.jpg"
+                            alt="A baby wearing a white beanie with pink bunny ears" class="about__img"></div>
+                    <p class="about__cont">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy
+                        eirmod
+                        tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et
+                        accusam
+                        et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem
+                        ipsum
+                        dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
+                        tempor invidunt ut labore et dolore magna aliquyam erat, sed diam</p>
+                    <div class="about__social__container">
+                        <a href="">
+                            <div class="about__social">
+                                <i class="fab fa-instagram"></i>
+                                <h5>Babyblissonline</h5>
+                            </div>
+                        </a>
+                        <a href="">
+                            <div class="about__social">
+                                <i class="fab fa-facebook"></i>
+                                <h5>Babyblissonline</h5>
+                            </div>
+                        </a>
+                        <a href="">
+                            <div class="about__social">
+                                <i class="fab fa-twitter"></i>
+                                <h5>Babyblissonline</h5>
+                            </div>
+                        </a>
                     </div>
-                    <div class="about__social">
-                        <i class="fab fa-facebook"></i>
-                        <h5>Babyblissonline</h5>
-                    </div>
-                    <div class="about__social">
-                        <i class="fab fa-twitter"></i>
-                        <h5>Babyblissonline</h5>
-                    </div>
-
                 </div>
             </section>
         </main>
