--- a/basket.html
+++ b/basket.html
@@ -14,6 +14,7 @@
 
 <body>
 
+
     <div class="wrapper">
         <header>
             <div class="navbar__container">
@@ -33,7 +34,27 @@
             </div>
         </header>
         <main>
-        </main>
+            <section class="container">
+                <div class="content__wrapper"></div>
+                <div class="heading__clearbtn__container">
+                    <h1>Your Basket</h1>
+                    <div class="clearbtn">
+                        <p>Clear basket</p>
+                        <i class="fas fa-trash"></i>
+                    </div>
+                </div>
+                <div class="loading__products"></div>
+                <div class="basket__grid">
+
+                </div>
+                <hr>
+                <div class="total__price__container">
+                </div>
+                <div class="basket__message__container"></div>
+                <div class="continue__shopping__link__container"></div>
+            </section>
+    </div>
+    </main>
     </div>
     <footer>
         <div class="footer__logo__container">
