--- a/product_details.html
+++ b/product_details.html
@@ -34,13 +34,14 @@
         </header>
         <main>
             <section class="container">
-                <div class="content__wrapper"></div>
-                <a href="products.html" class="all__products__link__container back_btn"><i
-                        class="fas fa-angle-left back__arrow"></i>
-                    <p>Back to all products</p>
-                </a>
-                <div class="product__details__container"></div>
-                <div class="product__detail__message__container"></div>
+                <div class="content__wrapper">
+                    <a href="products.html" class="all__products__link__container back_btn"><i
+                            class="fas fa-angle-left back__arrow"></i>
+                        <p>Back to all products</p>
+                    </a>
+                    <div class="product__details__container"></div>
+                    <div class="product__detail__message__container"></div>
+                </div>
             </section>
         </main>
     </div>
