login ok, basket ok

--- a/basket.html
+++ b/basket.html
@@ -43,15 +43,19 @@
                         <i class="fas fa-trash"></i>
                     </div>
                 </div>
-                <div class="loading__products"></div>
+                <div class="message__container"></div>
                 <div class="basket__grid">
-
+                    <div class="loading__products"></div>
                 </div>
                 <hr>
-                <div class="total__price__container">
+                <div class="sum__container">
+                    <h4>Sum</h4>
+                    <p class="total__sum"></p>
                 </div>
-                <div class="basket__message__container"></div>
-                <div class="continue__shopping__link__container"></div>
+                <div class="basket__btn__container">
+                    <a href="products.html"><button class="standard__cta__btn edit__btn">Continue shopping</button></a>
+                    <a href=""><button class="standard__cta__btn ">Checkout</button></a>
+                </div>
             </section>
     </div>
     </main>
