--- a/favorites.html
+++ b/favorites.html
@@ -37,10 +37,11 @@
                 <div class="content__wrapper"></div>
                 <h1>Your favorites</h1>
                 <div class="loading__products"></div>
+                <div class="message__container"></div>
                 <div class="favorite__grid">
 
                 </div>
-                <div class="favorite__message__container"></div>
+
                 <div class="all__products__link__container"></div>
             </section>
     </div>
