--- a/index.html
+++ b/index.html
@@ -36,13 +36,14 @@
             <div class="loading__home"></div>
             <div class="herobanner__container">
                 <div class="herobanner__img"></div>
-                <div class="index__message__container"></div>
+                <div class="message__container"></div>
             </div>
             <section class="container">
                 <h2>Featured products</h2>
                 <div class="loading__products"></div>
                 <div class="featured__container">
                 </div>
+                <div class="featured__message__container"></div>
                 <a href="products.html" class="all__products__link__container">
                     <p>View all products</p> <img src="./logo/Stork_SVG.svg" alt="Babybliss stork logo"
                         class="logo_btn">
