--- a/product_details.html
+++ b/product_details.html
@@ -39,8 +39,11 @@
                             class="fas fa-angle-left back__arrow"></i>
                         <p>Back to all products</p>
                     </a>
-                    <div class="product__details__container"></div>
-                    <div class="product__detail__message__container"></div>
+                    <div class="message__container"></div>
+                    <div class="product__details__container">
+                        <div class="loading__products"></div>
+                    </div>
+
                 </div>
             </section>
         </main>
