--- a/products.html
+++ b/products.html
@@ -33,7 +33,7 @@
             </div>
         </header>
         <main>
-            <div class="loading__products"></div>
+
             <section class="container">
                 <div class="content__wrapper">
                     <h1>All products </h1>
@@ -42,8 +42,9 @@
                         <input type="text" name="filter" id="filter" class="filter"
                             placeholder="Search example: beanie, shoes...">
                     </div>
-                    <div class="filter__message__container"></div>
+                    <div class="message__container"></div>
                     <div class="all__products__grid">
+                        <div class="loading__products"></div>
                     </div>
                     <div class="pagination__container">
                         <i class="fas fa-chevron-left page__arrow" aria-label="Pervious page"></i>
