logout button finished

--- a/add_product.html
+++ b/add_product.html
@@ -33,36 +33,54 @@
             </div>
         </header>
         <main>
-            <section class="add__product__container">
-                <div class="back__to__products__container">
-                    <i class="fal fa-angle-left"></i>
-                    <p>Back to all products</p>
+            <section class="container">
+                <div class="content__wrapper">
+                    <a href="products.html" class="all__products__link__container back_btn"><i
+                            class="fas fa-angle-left back__arrow"></i>
+                        <p>Back to all products</p>
+                    </a>
+                    <h1>Add product </h1>
+                    <div class="message__container"></div>
+                    <form class="add__product__form">
+                        <div class="input__container">
+                            <label for="title">Product title</label>
+                            <input type="text" name="title" id="title" class="title">
+                            <p class="helper__text">Minimum 5 characters</p>
+                        </div>
+                        <div class="title__error"></div>
+                        <div class="input__container">
+                            <label for="description">Description</label>
+                            <textarea name="description" id="description" class="description"></textarea>
+                            <p class="helper__text">Minimum 20 characters</p>
+                        </div>
+                        <div class="description__error"></div>
+                        <div class="input__container">
+                            <label for="price">Price</label>
+                            <input type="number" name="price" id="price" class="price">
+                            <p class="helper__text">Only numbers and must have 2 decimals ex: 99,89</p>
+                        </div>
+                        <div class="price__error"></div>
+                        <div class="input__container">
+                            <label for="image">Upload image</label>
+                            <input type="file" name="image" id="image" class="image">
+                            <p class="helper__text">Must be a JPG, JPEG or PNG image. Max 200mb</p>
+                        </div>
+                        <div class="image__error"></div>
+                        <div class="input__container">
+                            <label for="image__alt">Image alternative text</label>
+                            <input type="text" name="image__alt" id="image__alt" class="image__alt">
+                            <p class="helper__text">Explain the image for those who can't see it!</p>
+                        </div>
+                        <div class="image__alt__error"></div>
+                        <label>Featured</label>
+                        <div class="featured__icon__contaienr">
+                            <i class="fas fa-check-circle featured__yes featured__icon"></i>
+                            <i class="fas fa-times-circle featured__no featured__icon"></i>
+                            <input type="radio" name="featured" id="featured" class="featured__checkbox">
+                        </div>
+                        <button class="standard__cta__btn">Add product</button>
+                    </form>
                 </div>
-                <h1>Add product </h1>
-                <form class="add__product__form">
-                    <label for="title">Product title</label>
-                    <input type="text" name="title" id="title" class="title">
-                    <p>Minimum 5 characters</p>
-                    <div class="title__error"></div>
-                    <label for="description">Description</label>
-                    <textarea name="description" id="description" class="description"></textarea>
-                    <p>Minimum 20 characters</p>
-                    <div class="description__error"></div>
-                    <label for="price">Price</label>
-                    <input type="number" name="price" id="price" class="price">
-                    <p>Must have 2 decimals ex: 99,89</p>
-                    <div class="price__error"></div>
-                    <label for="image">Upload image</label>
-                    <input type="file" name="image" id="image" class="image">
-                    <p>Must be a JPG, JPEG or PNG image. Max 200mb</p>
-                    <div class="image__error"></div>
-                    <h5>Featured</h5>
-                    <label for="featured__yes"><i class="fas fa-check-circle"></i></label>
-                    <input type="radio" name="featured__yes" id="featured__yes" class="featured__yes">
-                    <label for="featured__no"><i class="fas fa-times-circle"></i></label>
-                    <input type="radio" name="featured__no" id="featured__no" class="featured__no">
-                </form>
-                <button class="standard__cta__btn">Add product</button>
             </section>
         </main>
     </div>
@@ -94,7 +112,7 @@
             </a>
         </div>
     </footer>
-    <script src="js/productDetails.js" type="module"></script>
+    <script src="js/addProduct.js" type="module"></script>
 </body>
 
 </html>
