Started add product

--- a/add_product.html
+++ b/add_product.html
@@ -56,8 +56,8 @@
                         <div class="description__error"></div>
                         <div class="input__container">
                             <label for="price">Price</label>
-                            <input type="number" name="price" id="price" class="price">
-                            <p class="helper__text">Only numbers and must have 2 decimals ex: 99,89</p>
+                            <input type="text" name="price" id="price" class="price">
+                            <p class="helper__text">Only numbers and must have 2 decimals ex: 99.89</p>
                         </div>
                         <div class="price__error"></div>
                         <div class="input__container">
